css/site.css
body 								{ margin:0; padding:0; color:#222; background:#000 url(./../image/site/essai_intro_sso_20sept09g.jpg) no-repeat 50% 0; }
img 								{ border:0; }
a 									{ color:#E2D1AA; }
a:hover								{color:#CCF2FF;}
/*-- Placement ----------------------------------------------------------*/

#accueil 							{ width:1024px; margin:auto; font:12px "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif; }
#accueil #test 						{ height:351px; padding:10px; position:absolute; width:530px; background:transparent url(./../image/site/cadrecentrepagesso.png) no-repeat scroll 0 0; color:#e2d1aa;  text-align:justify; }

#accueil .box 						{ height:342px;overflow:auto;padding:5px;width:505px;}
#presentation_box 					{ width:503px; padding-top: 15px; }
#news_box h2 						{ font-size:1.2em; margin:0; padding:0; margin-bottom:3px; }
#news_box h2 a 						{ color:#EEE; }
#news_box a 						{ color:#DDD; }
#news_box .comms 					{ font-size:.9em; }
.news 								{ font-size:11px; margin-bottom:10px; padding-bottom:5px; border-bottom:1px dotted #EEE; }
#screenshot_box ul 					{ padding:0; margin:0; }
#screenshot_box ul li 				{ list-style-type:none; float:left; width:165px; text-align:center; height:90px; line-height:75px; vertical-align:middle; }
#screenshot_box ul li img 			{ vertical-align:middle; }
.creation_text 						{ float:left; display:block; width:200px; }
#login 								{ padding:3px 10px 0; margin-left:71px; width:530px; position:absolute; background:transparent url(./../image/site/cadrehautpagesso.png) no-repeat scroll 0 0; color:#EEE; height:75px; font-size:11px; top:0; }
#login_ok 							{ color:#E2D1AA;padding:21px 95px 0; margin-left:71px; width:530px; position:absolute; background:transparent url(./../image/site/cadrehautpagesso1.png) no-repeat scroll 0 0; color:#EEE; height:75px; font-size:11px; top:0; }
#login_ok a 						{ color:#E2D1AA;text-decoration: none;}
.login_nom 							{ background-color:#000000; border:0 none; color:white; float:left; height:13px; margin-left:52px; margin-top:19px; text-align:left; width:81px; }
.login_mdp 							{ background-color:#000000; border:0 none; color:white; float:left; height:13px; margin-left:54px; margin-top:19px; text-align:left; width:80px; }
.login_auto 						{ background-color:#000000; border:0 none; color:white; float:left; height:13px; margin-left:76px; margin-top:19px; text-align:left; width:14px; }
.login_connexion 					{ cursor:pointer;display:block;float:left; height:16px; margin-left:13px; margin-top:19px; text-align:left; width:62px; }
.login_connexion:hover				{ background:transparent url(./../image/site/boutonconnexion.png) no-repeat scroll -3px;}
#login a 							{ color:#EEE; font-size:13px; }
#login #deco 						{ float:right; cursor:pointer; }
.carac 								{ float:left; width:150px; padding:0; margin:0;margin-top:10px; }
.carac li 							{ list-style-type:none; cursor:default; }
.carac li span 						{ width:75px; float:left; }
#loading_sso 						{ background:transparent url(./../image/v2/ajax-activity-loader.gif); height:32px; width:32px; position:absolute; top:0; margin-left:830px; }
#creation_box 						{ padding:5px; width:500px; }
#creation_box input 				{ border:1px solid #CCC; }
#personnage 						{ background:transparent url(./../image/site/cadredroitpersoedb.png) no-repeat scroll 0 0; color:#E2D1AA; margin-left:566px; position:absolute; text-align:justify; top:0; width:401px; }
#personnage h3 						{ text-transform:capitalize; padding-left:22px; padding-top:13px; font-size: 12px; }
#personnage .personnage_box 		{ height:146px; margin-left:41px; padding-top:20px; width:354px; }
#personnage .personnage_roi 		{ background:transparent url(./../image/site/cadredroitpropaedb.png) no-repeat scroll 0 0; height:367px; margin-left:12px; margin-top:86px; padding-left:33px; padding-right:10px; padding-top:6px; width:363px; }
#personnage .personnage_roi p 		{ height:340px; overflow:auto; }
.perso_selected 					{ background-color:#CCC; -webkit-border-radius:10px; -moz-border-radius:10px; }

/*-- Menu ----------------------------------------------------------*/

#menu_accueil 						{ background:transparent url(./../image/site/cadrecentreboutonsso.png) repeat scroll 0 0; color:#FFFFFF; height:34px; margin:0 0 0 49px; position:absolute; top:446px; width:534px; }
#menu_accueil ul li 				{ list-style:none; cursor:pointer; float:left; }
#presentation_menu 					{ height:29px; margin-left:-33px; margin-top:-10px; position:absolute; width:129px; }
#presentation_menu:hover 			{ background:url(./../image/site/boutonbiso.png) no-repeat; cursor:pointer; }
#presentation_menu:active 			{ background:url(./../image/site/boutonpresentation.png) no-repeat; cursor:pointer; height:33px; margin-left:-36px; margin-top:-13px; }
#screenshot_menu 					{ height:29px; margin-left:98px; margin-top:-10px; position:absolute; width:129px; }
#screenshot_menu:hover 				{ background:url(./../image/site/boutonbiso.png) no-repeat; cursor:pointer; }
#screenshot_menu:active 			{ background:url(./../image/site/boutonscreenshot.png) no-repeat; cursor:pointer; height:33px; margin-left:96px; margin-top:-12px; }
#news_menu 							{ height:29px; margin-left:230px; margin-top:-10px; position:absolute; width:129px; }
#news_menu:hover 					{ background:url(./../image/site/boutonbiso.png) no-repeat; cursor:pointer; }
#news_menu:active 					{ background:url(./../image/site/boutonnews.png) no-repeat; cursor:pointer; height:33px; margin-left:227px; margin-top:-13px; }
#creation_menu 						{ height:29px; margin-left:361px; margin-top:-10px; position:absolute; width:129px; }
#creation_menu:hover 				{ background:url(./../image/site/boutonbiso.png) no-repeat; cursor:pointer; }
#creation_menu:active 				{ background:url(./../image/site/boutoncreationcompte.png) no-repeat; cursor:pointer; height:33px; margin-left:359px; margin-top:-13px; }
/* ... */

